--- a/swiftapp1/templates/contact.html
+++ b/swiftapp1/templates/contact.html
@@ -10,8 +10,8 @@
   <meta name="keywords" content="">
 
   <!-- Favicons -->
-  <link href="{% static 'assets/img/favicon.png' %}" rel="icon">
-  <link href="{% static 'assets/img/apple-touch-icon.png' %}" rel="apple-touch-icon">
+  <link href="" rel="icon">
+  <link href="" rel="apple-touch-icon">
 
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com" rel="preconnect">
@@ -130,6 +130,7 @@
 
           <div class="col-lg-6">
             <form id="formInfo" action="{% url 'contactInfo' %}" method="post" class="php-email-form" data-aos="fade-up" data-aos-delay="400">
+              {% csrf_token %}
               <div class="row gy-4">
 
                 <div class="col-md-6">
