--- a/swiftapp1/templates/index.html
+++ b/swiftapp1/templates/index.html
@@ -83,7 +83,7 @@
       <div id="hero-carousel" class="carousel slide carousel-fade" data-bs-ride="carousel" data-bs-interval="5000">
 
         <div class="carousel-item active">
-            <img src="{% static 'assets/img/hero-carousel/hero-carousel-1.jpg' %}" alt="">
+            <img src="{% static 'assets/img/hero-carousel/hero-carousel-1.webp' %}" alt="">
           <div class="carousel-container">
             <h2>Welcome to <span>SwiftGo</span></h2>
           <p> Looking for the perfect fabric for your next masterpiece? Explore SwiftGo’s 
@@ -95,7 +95,7 @@
         </div><!-- End Carousel Item -->
 
         <div class="carousel-item">
-            <img src="{% static 'assets/img/hero-carousel/hero-carousel-2.jpg' %}" alt="">
+            <img src="{% static 'assets/img/hero-carousel/hero-carousel-2.webp' %}" alt="">
           <div class="carousel-container">
             <h2>Fabric That Speaks Quality.</h2>
             <p>SwiftGo offers a wide range of high-quality clothing materials designed to match your style and purpose.
@@ -105,7 +105,7 @@
         </div><!-- End Carousel Item -->
 
         <div class="carousel-item">
-            <img src="{% static 'assets/img/hero-carousel/hero-carousel-3.jpg' %}" alt="">
+            <img src="{% static 'assets/img/hero-carousel/hero-carousel-3.webp' %}" alt="">
           <div class="carousel-container">
             <h2>Your Fabric, Your Story.</h2>
             <p>Every design starts with the right material. At SwiftGo, we make it easy to 
